# ChangeLog for app-office/lyx
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.115 2008/01/21 18:05:00 armin76 Exp $

  21 Jan 2008; Raúl Porcel <armin76@gentoo.org> lyx-1.4.4.ebuild:
  sparc stable wrt #205725

  21 Jan 2008; Christian Faulhammer <opfer@gentoo.org> lyx-1.4.4.ebuild:
  stable x86, bug 205725

  20 Jan 2008; Christoph Mende <angelos@gentoo.org> lyx-1.4.4.ebuild:
  Stable on amd64 wrt bug #205725

  20 Jan 2008; Brent Baude <ranger@gentoo.org> lyx-1.5.3.ebuild:
  Marking lyx-1.5.3 ~ppc64 for bug 206673

  20 Jan 2008; Brent Baude <ranger@gentoo.org> lyx-1.4.4.ebuild:
  Marking lyx-1.4.4 ppc for bug 205725

  19 Jan 2008; Alexis Ballier <aballier@gentoo.org> lyx-1.4.4.ebuild,
  lyx-1.5.3.ebuild:
  python is also needed at runtime, thanks to Pavel Sanda <ps@twin.jikos.cz>

  19 Jan 2008; Alexis Ballier <aballier@gentoo.org> lyx-1.5.3.ebuild:
  export CXX to call the correct one and not g++ directly, thanks again to
  Pavel Sanda <ps@twin.jikos.cz>

  17 Jan 2008; Alexis Ballier <aballier@gentoo.org> lyx-1.4.4.ebuild,
  lyx-1.5.1.ebuild, lyx-1.5.3.ebuild:
  latex is also needed at runtime

  17 Jan 2008; Alexis Ballier <aballier@gentoo.org> -lyx-1.5.0.ebuild:
  remove unused version

  17 Jan 2008; Alexis Ballier <aballier@gentoo.org> lyx-1.4.4.ebuild:
  fix dependencies for 1.4.4, thanks to Pavel Sanda <ps@twin.jikos.cz>, should
  fix bug #169864

*lyx-1.5.3 (16 Jan 2008)

  16 Jan 2008; Alexis Ballier <aballier@gentoo.org> files/lyx.desktop,
  +lyx-1.5.3.ebuild:
  version bump, thanks to Pavel Sanda <ps@twin.jikos.cz>

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org> lyx-1.5.1.ebuild:
  Marked ~hppa (bug #195815).

  26 Oct 2007; Raúl Porcel <armin76@gentoo.org> lyx-1.5.1.ebuild:
  Add ~alpha/~ia64 wrt #195815

  22 Sep 2007; nixnut <nixnut@gentoo.org> lyx-1.5.1.ebuild:
  Added ~ppc wrt bug 168799

*lyx-1.5.1 (06 Aug 2007)
