@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gnome-mime-application-x-lyx.png 3302 RMD160 6b59808311d032c201961c0b085e13e2aae86bef SHA1 ccc71e9f98cfd6f6efbf550572eec89506d08349 SHA256 d0d16c7a835cbb8f15ea79efd27128a9c633ac56cdc06365449f389b21a0abce
 MD5 01d67cd0d7c3b2bb8aae514aeb8a9200 files/gnome-mime-application-x-lyx.png 3302
 RMD160 6b59808311d032c201961c0b085e13e2aae86bef files/gnome-mime-application-x-lyx.png 3302
@@ -43,14 +46,14 @@ EBUILD lyx-1.5.3.ebuild 3391 RMD160 28c3a40cd4b36b79fc4aa7b160897caae687991a SHA
 MD5 47ce839dbe9cfdc1bc4ccfe9a32f6c8e lyx-1.5.3.ebuild 3391
 RMD160 28c3a40cd4b36b79fc4aa7b160897caae687991a lyx-1.5.3.ebuild 3391
 SHA256 927d345bf4edd3e2b30404d67c07645e66765aadca5f29bdbdeb8a54ded9c3c3 lyx-1.5.3.ebuild 3391
-MISC ChangeLog 17921 RMD160 dfb2d37d533b85cc43e659158166d331b75b6bca SHA1 3e8e66fc794d3309f8e14d733027f6d17f821716 SHA256 5f569ad335e2d7d14004eb521b79d9d68563645a8a8ca84b944bdfa3dea2bba7
-MD5 4a297ed270a6dd5a6d29260da7b5c30d ChangeLog 17921
-RMD160 dfb2d37d533b85cc43e659158166d331b75b6bca ChangeLog 17921
-SHA256 5f569ad335e2d7d14004eb521b79d9d68563645a8a8ca84b944bdfa3dea2bba7 ChangeLog 17921
-MISC metadata.xml 173 RMD160 2a5c18ac36394027f647f337410df755f5d37369 SHA1 98f3803fec9ccaf2574571b904292027095f5273 SHA256 f489b81a91c6b9b653122719caac14c4f1cfd63d26d4b100abf1a995db71d9c8
-MD5 cd383624b0ad49f4db815891a9777994 metadata.xml 173
-RMD160 2a5c18ac36394027f647f337410df755f5d37369 metadata.xml 173
-SHA256 f489b81a91c6b9b653122719caac14c4f1cfd63d26d4b100abf1a995db71d9c8 metadata.xml 173
+MISC ChangeLog 18033 RMD160 5983188cb6983d5105ebeb98171c699bbde680a6 SHA1 191064db8cd437eedf3c0f960d238673b78e548a SHA256 9129643ed66e55ded93a1373df69df89bab0731938817d612860697309411db6
+MD5 9938d4802089e76ca29e77405cba2d2e ChangeLog 18033
+RMD160 5983188cb6983d5105ebeb98171c699bbde680a6 ChangeLog 18033
+SHA256 9129643ed66e55ded93a1373df69df89bab0731938817d612860697309411db6 ChangeLog 18033
+MISC metadata.xml 359 RMD160 5f4556f94b5dce653bbfcbcfa7bce1f0c3f1c119 SHA1 07b78da45f62622b401453910f4d8ce001e02018 SHA256 c9ae8aea55261b3b5c4ebe50ea03becd70042cef4319cd9dabdfcb5525da0f20
+MD5 f167c207139deb4219ff35cc750d4686 metadata.xml 359
+RMD160 5f4556f94b5dce653bbfcbcfa7bce1f0c3f1c119 metadata.xml 359
+SHA256 c9ae8aea55261b3b5c4ebe50ea03becd70042cef4319cd9dabdfcb5525da0f20 metadata.xml 359
 MD5 96f038440e3578a8bf0bc882295ed2d2 files/digest-lyx-1.4.2 1154
 RMD160 6c4509f7b3e5b0efc604f998adc3c3551995aec2 files/digest-lyx-1.4.2 1154
 SHA256 255851134c1b170edfc08e6c10174d3285e2eeee4ac5c8c977a99493611de92f files/digest-lyx-1.4.2 1154
@@ -63,3 +66,10 @@ SHA256 5b402829e857494887d07d414f55ceb84cae0c312c6e55a1c5a776eee4f7c674 files/di
 MD5 72ffc6e4dfc197cba24de2f575fa5daf files/digest-lyx-1.5.3 901
 RMD160 ff1508bc7a4187d178ced089191ecf45751f22ed files/digest-lyx-1.5.3 901
 SHA256 48e9cf5fcaa2838ddb98c8df2e245f68f14b9590fc04f370d1fdfa50bd721b6b files/digest-lyx-1.5.3 901
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHnImCvFcC4BYPU0oRAil8AKCu83aNqrXXRbCusH43s7J0HhKYAACgiQvk
+nqYOsUWKdESuoksarP0tP+U=
+=GaYO
+-----END PGP SIGNATURE-----
