@@ -1,6 +1,9 @@
 # ChangeLog for app-office/lyx
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.115 2008/01/21 18:05:00 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.116 2008/01/27 13:39:04 aballier Exp $
+
+  27 Jan 2008; Alexis Ballier <aballier@gentoo.org> metadata.xml:
+  Add Pavel and me as his proxy to metadata
 
   21 Jan 2008; Raúl Porcel <armin76@gentoo.org> lyx-1.4.4.ebuild:
   sparc stable wrt #205725
